Support comma-separated expressions